녹화용 액티비티 이동 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FybProject">
         <activity
+            android:name=".SplashActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".SignUpActivity"
             android:exported="true" >
         </activity>
@@ -18,25 +27,14 @@
             android:exported="true" >
         </activity>
         <activity
-            android:name=".GoogleSignInActivity"
-            android:exported="false" />
-        <activity
-            android:name=".KakaoSignInActivity"
-            android:exported="false" />
-        <activity
             android:name=".LocalSignInActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".SignInActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
     </application>
