retrofit 인스턴스 생성 클래스 수정 + auth api 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     // Gson 변환기 라이브러리
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Okhttp 라이브러리, jwt 토큰 작업할 때 사용
+    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
