--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     // Okhttp 라이브러리, jwt 토큰 작업할 때 사용
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
 
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
