회원가입 디자인 및 방식 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:exported="true" >
         </activity>
         <activity
+            android:name=".SignUpVerificationActivity"
+            android:exported="true" >
+        </activity>
+        <activity
             android:name=".FindPwActivity"
             android:exported="true" >
         </activity>
