장바구니 등록 구현 완

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="adjustNothing"
             android:exported="true" >
         </activity>
         <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID"
