--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.work:work-runtime:2.7.1'
+
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //url 이미지 띄우기
