--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,21 +30,21 @@ android {
 dependencies {
     implementation 'androidx.work:work-runtime:2.7.1'
 
-    //Circle ImageView
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-    //url 이미지 띄우기
+    implementation 'de.hdodenhof:circleimageview:3.1.0' //Circle ImageView
+
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    //viewpager
+
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'me.relex:circleindicator:2.1.4'
+
     // Retrofit 라이브러리
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     // Gson 변환기 라이브러리
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // Okhttp 라이브러리, jwt 토큰 작업할 때 사용
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
-    //recyclerview
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
