키보드 관련 화면 처리 테스트, 장바구니 cancel 버튼 클릭 추가 내용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FybProject"
+        android:windowSoftInputMode="adjustPan"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ProfileImageActivity"
@@ -53,8 +54,7 @@
             android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:windowSoftInputMode="adjustNothing"></activity>
+            android:exported="true"></activity>
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
